--- a/ormconfig.json
+++ b/ormconfig.json
@@ -4,7 +4,7 @@
     "port": 5432,
     "username": "postgres",
     "password": "jennyfer18",
-    "database": "proyectojs",
+    "database": "postgres",
     "entities": [
         "dist/**/*.entity{.ts,.js}"
     ],
